--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "samslacker",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "index.js",
   "scripts": {
     "build": "babel src -d lib",
@@ -13,7 +13,7 @@
   },
   "babel": {
     "presets": [
-      "es2015"
+      "env"
     ]
   },
   "author": "Fire In Belly Ltd.",
@@ -21,15 +21,16 @@
   "homepage": "https://samplify.io",
   "description": "Node wrapper for Sam Slacker APIs",
   "dependencies": {
+    "aws-sdk": "^2.266.1",
+    "aws-sns-publish": "^3.2.0",
+    "config": "^1.30.0",
     "request": "^2.74.0",
-    "request-promise": "^4.1.1",
-    "query-string": "^5.0.0"
+    "request-promise": "^4.1.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "chai": "^3.5.0",
-    "babel-cli": "^6.14.0",
-    "babel-core": "^6.13.2",
-    "babel-preset-es2015": "^6.24.0",
     "mocha": "^3.2.0"
   }
 }
